// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`isAdmin is true 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start convo_wrapper"
>
  <div
    className="summary_wrapper
          flex-100 layout-row layout-wrap layout-align-start-center "
    onClick={[Function]}
  >
    <div
      className="flex-70 layout-wrap layout-row layout-align-start-center"
    >
      <div
        className="flex-5"
      />
      Shipment Reference
      :
      <div
        className="flex-5"
      />
      <b />
    </div>
    <div
      className="flex-30 layout-align-center-center layout-row"
    >
      <h4
        className="flex-none no_m"
      >
        Show Details
      </h4>
      <div
        className="flex-5"
      />
      <i
        className="fa fa-info clip"
        style={
          Object {
            "background": "-webkit-linear-gradient(left, #333,#fafafa)",
          }
        }
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start messageView"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-start"
    >
      <div
        className="message_scroll
          flex-100 layout-row layout-align-start-start layout-wrap "
        id="messageList"
      >
        <div
          className="flex-70 layout-row layout-align-start-start layout-wrap"
        >
          <Message
            client={
              Object {
                "company_name": "Mehristweniger",
                "email": "muller55@yahoo.de",
                "first_name": "Sebastian",
                "last_name": "Muller",
                "password": "pwd",
              }
            }
            key="UUID_MOCK_KEY_4"
            message="FOO_MESSAGE"
            t={[Function]}
            tenant={
              Object {
                "emails": Object {
                  "sales": Object {
                    "air": "sales@demo.com",
                    "general": "sales@demo.com",
                    "ocean": "sales@demo.com",
                    "rail": "sales@demo.com",
                  },
                  "support": Object {
                    "air": "imc.air@demo.com",
                    "general": "support@demo.com",
                    "ocean": "imc.sea@demo.com",
                    "rail": "imc.rail@demo.com",
                  },
                },
                "id": 123,
                "name": "TENANT_NAME",
                "phones": Object {
                  "support": "TENANT_SUPPORT_PHONE",
                },
                "scope": Object {
                  "cargo_info_level": "text",
                  "carriage_options": Object {
                    "on_carriage": Object {
                      "export": "mandatory",
                      "import": "mandatory",
                    },
                    "pre_carriage": Object {
                      "export": "optional",
                      "import": "optional",
                    },
                  },
                  "closed_quotation_tool": true,
                  "customs_export_paper": false,
                  "detailed_billing": true,
                  "has_customs": true,
                  "has_insurance": true,
                  "hide_grand_total": true,
                  "mandatory_form_fields": Object {
                    "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
                    "total_goods_value": 3370,
                  },
                  "modes_of_transport": Object {
                    "air": Object {
                      "AIR_LOAD_TYPE": 0,
                    },
                    "ocean": Object {
                      "OCEAN_LOAD_TYPE": 2,
                    },
                    "rail": Object {
                      "RAIL_LOAD_TYPE": 0,
                    },
                    "truck": Object {
                      "TRUCK_LOAD_TYPE": 0,
                    },
                  },
                  "terms": Array [
                    "FOO_TERM",
                    "BAR_TERM",
                  ],
                },
                "subdomain": "TENANT_SUBDOMAIN",
                "theme": Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                },
              }
            }
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            user={
              Object {
                "company_name": "FOO_COMPANY",
                "currency": "EUR",
                "email": "foo@bar.baz",
                "first_name": "John",
                "guest": false,
                "last_name": "Doe",
                "phone": "6345789",
                "role": Object {
                  "name": "admin",
                },
                "role_id": 1,
              }
            }
          />
          <Message
            client={
              Object {
                "company_name": "Mehristweniger",
                "email": "muller55@yahoo.de",
                "first_name": "Sebastian",
                "last_name": "Muller",
                "password": "pwd",
              }
            }
            key="UUID_MOCK_KEY_5"
            message="BAR_MESSAGE"
            t={[Function]}
            tenant={
              Object {
                "emails": Object {
                  "sales": Object {
                    "air": "sales@demo.com",
                    "general": "sales@demo.com",
                    "ocean": "sales@demo.com",
                    "rail": "sales@demo.com",
                  },
                  "support": Object {
                    "air": "imc.air@demo.com",
                    "general": "support@demo.com",
                    "ocean": "imc.sea@demo.com",
                    "rail": "imc.rail@demo.com",
                  },
                },
                "id": 123,
                "name": "TENANT_NAME",
                "phones": Object {
                  "support": "TENANT_SUPPORT_PHONE",
                },
                "scope": Object {
                  "cargo_info_level": "text",
                  "carriage_options": Object {
                    "on_carriage": Object {
                      "export": "mandatory",
                      "import": "mandatory",
                    },
                    "pre_carriage": Object {
                      "export": "optional",
                      "import": "optional",
                    },
                  },
                  "closed_quotation_tool": true,
                  "customs_export_paper": false,
                  "detailed_billing": true,
                  "has_customs": true,
                  "has_insurance": true,
                  "hide_grand_total": true,
                  "mandatory_form_fields": Object {
                    "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
                    "total_goods_value": 3370,
                  },
                  "modes_of_transport": Object {
                    "air": Object {
                      "AIR_LOAD_TYPE": 0,
                    },
                    "ocean": Object {
                      "OCEAN_LOAD_TYPE": 2,
                    },
                    "rail": Object {
                      "RAIL_LOAD_TYPE": 0,
                    },
                    "truck": Object {
                      "TRUCK_LOAD_TYPE": 0,
                    },
                  },
                  "terms": Array [
                    "FOO_TERM",
                    "BAR_TERM",
                  ],
                },
                "subdomain": "TENANT_SUBDOMAIN",
                "theme": Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                },
              }
            }
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            user={
              Object {
                "company_name": "FOO_COMPANY",
                "currency": "EUR",
                "email": "foo@bar.baz",
                "first_name": "John",
                "guest": false,
                "last_name": "Doe",
                "phone": "6345789",
                "role": Object {
                  "name": "admin",
                },
                "role_id": 1,
              }
            }
          />
        </div>
        <Element
          name="messagesEnd"
        />
      </div>
      <form
        className="msg_form border_divider flex-100  layout-row layout-align-start-center"
        onSubmit={[Function]}
      >
        <div
          className="flex-90 layout-row layout-align-center-space-around height_100 layout-wrap"
        >
          <div
            className="flex-95 layout-row layout-align-center-center input_box"
          >
            <input
              className="flex-90 text_input"
              name="title"
              onChange={[Function]}
              placeholder="Type your message title here...."
              type="text"
              value=""
            />
          </div>
          <div
            className="flex-95 layout-row layout-align-center-center"
          >
            <textarea
              className="flex-90 text_area"
              cols="30"
              id=""
              name="message"
              onChange={[Function]}
              placeholder="Type your message text here...."
              rows="5"
              value=""
            />
          </div>
        </div>
        <div
          className="flex-10 height_100 layout-row layout-align-center-center"
        >
          <button
            className="flex-none layout-row layout-align-center-center send_button"
            onSubmit={[Function]}
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          >
            <i
              className="flex-none fa fa-paper-plane-o"
            />
          </button>
        </div>
      </form>
      <div />
    </div>
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start convo_wrapper"
>
  <div
    className="summary_wrapper
          flex-100 layout-row layout-wrap layout-align-start-center "
    onClick={[Function]}
  >
    <div
      className="flex-70 layout-wrap layout-row layout-align-start-center"
    >
      <div
        className="flex-5"
      />
      Shipment Reference
      :
      <div
        className="flex-5"
      />
      <b />
    </div>
    <div
      className="flex-30 layout-align-center-center layout-row"
    >
      <h4
        className="flex-none no_m"
      >
        Show Details
      </h4>
      <div
        className="flex-5"
      />
      <i
        className="fa fa-info clip"
        style={
          Object {
            "background": "-webkit-linear-gradient(left, #333,#fafafa)",
          }
        }
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start messageView"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-start"
    >
      <div
        className="message_scroll
          flex-100 layout-row layout-align-start-start layout-wrap "
        id="messageList"
      >
        <div
          className="flex-70 layout-row layout-align-start-start layout-wrap"
        >
          <Message
            client={null}
            key="UUID_MOCK_KEY_0"
            message="FOO_MESSAGE"
            t={[Function]}
            tenant={
              Object {
                "emails": Object {
                  "sales": Object {
                    "air": "sales@demo.com",
                    "general": "sales@demo.com",
                    "ocean": "sales@demo.com",
                    "rail": "sales@demo.com",
                  },
                  "support": Object {
                    "air": "imc.air@demo.com",
                    "general": "support@demo.com",
                    "ocean": "imc.sea@demo.com",
                    "rail": "imc.rail@demo.com",
                  },
                },
                "id": 123,
                "name": "TENANT_NAME",
                "phones": Object {
                  "support": "TENANT_SUPPORT_PHONE",
                },
                "scope": Object {
                  "cargo_info_level": "text",
                  "carriage_options": Object {
                    "on_carriage": Object {
                      "export": "mandatory",
                      "import": "mandatory",
                    },
                    "pre_carriage": Object {
                      "export": "optional",
                      "import": "optional",
                    },
                  },
                  "closed_quotation_tool": true,
                  "customs_export_paper": false,
                  "detailed_billing": true,
                  "has_customs": true,
                  "has_insurance": true,
                  "hide_grand_total": true,
                  "mandatory_form_fields": Object {
                    "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
                    "total_goods_value": 3370,
                  },
                  "modes_of_transport": Object {
                    "air": Object {
                      "AIR_LOAD_TYPE": 0,
                    },
                    "ocean": Object {
                      "OCEAN_LOAD_TYPE": 2,
                    },
                    "rail": Object {
                      "RAIL_LOAD_TYPE": 0,
                    },
                    "truck": Object {
                      "TRUCK_LOAD_TYPE": 0,
                    },
                  },
                  "terms": Array [
                    "FOO_TERM",
                    "BAR_TERM",
                  ],
                },
                "subdomain": "TENANT_SUBDOMAIN",
                "theme": Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                },
              }
            }
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            user={
              Object {
                "company_name": "FOO_COMPANY",
                "currency": "EUR",
                "email": "foo@bar.baz",
                "first_name": "John",
                "guest": false,
                "last_name": "Doe",
                "phone": "6345789",
                "role": Object {
                  "name": "shipper",
                },
                "role_id": 1,
              }
            }
          />
          <Message
            client={null}
            key="UUID_MOCK_KEY_1"
            message="BAR_MESSAGE"
            t={[Function]}
            tenant={
              Object {
                "emails": Object {
                  "sales": Object {
                    "air": "sales@demo.com",
                    "general": "sales@demo.com",
                    "ocean": "sales@demo.com",
                    "rail": "sales@demo.com",
                  },
                  "support": Object {
                    "air": "imc.air@demo.com",
                    "general": "support@demo.com",
                    "ocean": "imc.sea@demo.com",
                    "rail": "imc.rail@demo.com",
                  },
                },
                "id": 123,
                "name": "TENANT_NAME",
                "phones": Object {
                  "support": "TENANT_SUPPORT_PHONE",
                },
                "scope": Object {
                  "cargo_info_level": "text",
                  "carriage_options": Object {
                    "on_carriage": Object {
                      "export": "mandatory",
                      "import": "mandatory",
                    },
                    "pre_carriage": Object {
                      "export": "optional",
                      "import": "optional",
                    },
                  },
                  "closed_quotation_tool": true,
                  "customs_export_paper": false,
                  "detailed_billing": true,
                  "has_customs": true,
                  "has_insurance": true,
                  "hide_grand_total": true,
                  "mandatory_form_fields": Object {
                    "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
                    "total_goods_value": 3370,
                  },
                  "modes_of_transport": Object {
                    "air": Object {
                      "AIR_LOAD_TYPE": 0,
                    },
                    "ocean": Object {
                      "OCEAN_LOAD_TYPE": 2,
                    },
                    "rail": Object {
                      "RAIL_LOAD_TYPE": 0,
                    },
                    "truck": Object {
                      "TRUCK_LOAD_TYPE": 0,
                    },
                  },
                  "terms": Array [
                    "FOO_TERM",
                    "BAR_TERM",
                  ],
                },
                "subdomain": "TENANT_SUBDOMAIN",
                "theme": Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                },
              }
            }
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            user={
              Object {
                "company_name": "FOO_COMPANY",
                "currency": "EUR",
                "email": "foo@bar.baz",
                "first_name": "John",
                "guest": false,
                "last_name": "Doe",
                "phone": "6345789",
                "role": Object {
                  "name": "shipper",
                },
                "role_id": 1,
              }
            }
          />
        </div>
        <Element
          name="messagesEnd"
        />
      </div>
      <form
        className="msg_form border_divider flex-100  layout-row layout-align-start-center"
        onSubmit={[Function]}
      >
        <div
          className="flex-90 layout-row layout-align-center-space-around height_100 layout-wrap"
        >
          <div
            className="flex-95 layout-row layout-align-center-center input_box"
          >
            <input
              className="flex-90 text_input"
              name="title"
              onChange={[Function]}
              placeholder="Type your message title here...."
              type="text"
              value=""
            />
          </div>
          <div
            className="flex-95 layout-row layout-align-center-center"
          >
            <textarea
              className="flex-90 text_area"
              cols="30"
              id=""
              name="message"
              onChange={[Function]}
              placeholder="Type your message text here...."
              rows="5"
              value=""
            />
          </div>
        </div>
        <div
          className="flex-10 height_100 layout-row layout-align-center-center"
        >
          <button
            className="flex-none layout-row layout-align-center-center send_button"
            onSubmit={[Function]}
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          >
            <i
              className="flex-none fa fa-paper-plane-o"
            />
          </button>
        </div>
      </form>
      <div />
    </div>
  </div>
</div>
`;

exports[`state.showDetails is true 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start convo_wrapper"
>
  <div
    className="summary_wrapper
          flex-100 layout-row layout-wrap layout-align-start-center "
    onClick={[Function]}
  >
    <div
      className="flex-70 layout-wrap layout-row layout-align-start-center"
    >
      <div
        className="flex-5"
      />
      Shipment Reference
      :
      <div
        className="flex-5"
      />
      <b />
    </div>
    <div
      className="flex-30 layout-align-center-center layout-row"
    >
      <h4
        className="flex-none no_m"
      >
        Show Details
      </h4>
      <div
        className="flex-5"
      />
      <i
        className="fa fa-times clip"
        style={
          Object {
            "background": "-webkit-linear-gradient(left, #333,#fafafa)",
          }
        }
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start messageView"
  >
    <MessageShipmentData
      closeInfo={[Function]}
      name=""
      onChange={null}
      shipmentData={
        Object {
          "booking_placed_at": "2018-11-01T11:14:33z",
          "cargo_count": 2,
          "cargo_items_attributes": Array [],
          "cargo_notes": "SHIPMENT_CARGO_NOTES",
          "cargo_units": Array [
            Object {
              "dimension_x": 107,
              "dimension_y": 63,
              "dimension_z": 67,
              "quantity": 2,
            },
          ],
          "clientName": "SHIPMENT_CLIENT_NAME",
          "containers_attributes": Array [],
          "delivery_address": "SHIPMENT_DELIVERY_ADDRESS",
          "destination": Object {
            "fullAddress": "SHIPMENT_DESTINATION_FULL_ADDRESS",
          },
          "destination_hub": Object {
            "name": "SHIPMENT_DESTINATION_HUB",
            "startHub": Object {
              "address": Object {},
            },
          },
          "direction": "import",
          "eori": 1234,
          "has_on_carriage": false,
          "has_pre_carriage": false,
          "id": 654,
          "imc_reference": "SHIPMENT_IMC_REFERENCE",
          "incoterm": "SHIPMENT_INCOTERM",
          "incoterm_text": "SHIPMENT_INCOTERM_TEXT",
          "load_type": "cargo_item",
          "notes": "SHIPMENT_NOTES",
          "origin": Object {
            "fullAddress": "SHIPMENT_ORIGIN_FULL_ADDRESS",
          },
          "origin_hub": Object {
            "name": "SHIPMENT_ORIGIN_HUB",
            "startHub": Object {
              "address": Object {
                "city": "FOO_ADDRESS_CITY",
                "country": "FOO_ADDRESS_COUNTRY",
                "geocodedAddress": "FOO_GEOCODED_ADDRESS",
                "id": 246,
                "primary": true,
                "street": "FOO_ADDRESS_STREET",
                "streetNumber": "FOO_ADDRESS_STREET_NUMBER",
                "user": Object {
                  "primary": true,
                },
                "zipCode": "FOO_ADDRESS_ZIP_CODE",
              },
            },
          },
          "pickup_address": "SHIPMENT_PICKUP_ADDRESS",
          "planned_eta": "2018-12-01T18:14:33z",
          "planned_etd": "2018-11-12T12:37:08z",
          "planned_origin_drop_off_date": "2018-12-01T22:14:33z",
          "planned_pickup_date": "2018-12-08T04:30:08z",
          "schedule_set": Array [
            Object {
              "hub_route_key": "SHIPMENT_SCHEDULE_SET_HUB_ROUTE_KEY",
            },
          ],
          "schedules_charges": Object {
            "AIR_HUB_ROUTE_KEY": Object {
              "total": 200,
            },
            "OCEAN_HUB_ROUTE_KEY": Object {
              "total": 40,
            },
            "RAIL_HUB_ROUTE_KEY": Object {
              "total": 125,
            },
            "TRUCK_HUB_ROUTE_KEY": Object {
              "total": 75,
            },
          },
          "selected_offer": Object {
            "cargo": Object {},
            "customs": Object {
              "hasUnknown": false,
              "val": 12,
            },
            "insurance": Object {
              "val": 5,
            },
            "total": Object {
              "value": 87,
            },
          },
          "service_level": "standard",
          "status": "finished",
          "total_goods_value": Object {
            "currency": "USD",
            "value": 150000,
          },
          "total_price": Object {
            "currency": "USD",
            "value": 137550,
          },
          "trucking": Object {
            "has_on_carriage": false,
            "has_pre_carriage": false,
            "on_carriage": Object {
              "trucking_time_in_seconds": 28,
            },
            "pre_carriage": Object {
              "trucking_time_in_seconds": 55,
            },
          },
          "updated_at": "2018-11-01T18:14:33z",
        }
      }
      t={[Function]}
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      user={
        Object {
          "company_name": "FOO_COMPANY",
          "currency": "EUR",
          "email": "foo@bar.baz",
          "first_name": "John",
          "guest": false,
          "last_name": "Doe",
          "phone": "6345789",
          "role": Object {
            "name": "shipper",
          },
          "role_id": 1,
        }
      }
    />
  </div>
</div>
`;

exports[`theme is falsy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start convo_wrapper"
>
  <div
    className="summary_wrapper
          flex-100 layout-row layout-wrap layout-align-start-center "
    onClick={[Function]}
  >
    <div
      className="flex-70 layout-wrap layout-row layout-align-start-center"
    >
      <div
        className="flex-5"
      />
      Shipment Reference
      :
      <div
        className="flex-5"
      />
      <b />
    </div>
    <div
      className="flex-30 layout-align-center-center layout-row"
    >
      <h4
        className="flex-none no_m"
      >
        Show Details
      </h4>
      <div
        className="flex-5"
      />
      <i
        className="fa fa-info clip"
        style={
          Object {
            "background": "black",
          }
        }
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start messageView"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-start"
    >
      <div
        className="message_scroll
          flex-100 layout-row layout-align-start-start layout-wrap "
        id="messageList"
      >
        <div
          className="flex-70 layout-row layout-align-start-start layout-wrap"
        >
          <Message
            client={null}
            key="UUID_MOCK_KEY_2"
            message="FOO_MESSAGE"
            t={[Function]}
            tenant={
              Object {
                "emails": Object {
                  "sales": Object {
                    "air": "sales@demo.com",
                    "general": "sales@demo.com",
                    "ocean": "sales@demo.com",
                    "rail": "sales@demo.com",
                  },
                  "support": Object {
                    "air": "imc.air@demo.com",
                    "general": "support@demo.com",
                    "ocean": "imc.sea@demo.com",
                    "rail": "imc.rail@demo.com",
                  },
                },
                "id": 123,
                "name": "TENANT_NAME",
                "phones": Object {
                  "support": "TENANT_SUPPORT_PHONE",
                },
                "scope": Object {
                  "cargo_info_level": "text",
                  "carriage_options": Object {
                    "on_carriage": Object {
                      "export": "mandatory",
                      "import": "mandatory",
                    },
                    "pre_carriage": Object {
                      "export": "optional",
                      "import": "optional",
                    },
                  },
                  "closed_quotation_tool": true,
                  "customs_export_paper": false,
                  "detailed_billing": true,
                  "has_customs": true,
                  "has_insurance": true,
                  "hide_grand_total": true,
                  "mandatory_form_fields": Object {
                    "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
                    "total_goods_value": 3370,
                  },
                  "modes_of_transport": Object {
                    "air": Object {
                      "AIR_LOAD_TYPE": 0,
                    },
                    "ocean": Object {
                      "OCEAN_LOAD_TYPE": 2,
                    },
                    "rail": Object {
                      "RAIL_LOAD_TYPE": 0,
                    },
                    "truck": Object {
                      "TRUCK_LOAD_TYPE": 0,
                    },
                  },
                  "terms": Array [
                    "FOO_TERM",
                    "BAR_TERM",
                  ],
                },
                "subdomain": "TENANT_SUBDOMAIN",
                "theme": Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                },
              }
            }
            theme={null}
            user={
              Object {
                "company_name": "FOO_COMPANY",
                "currency": "EUR",
                "email": "foo@bar.baz",
                "first_name": "John",
                "guest": false,
                "last_name": "Doe",
                "phone": "6345789",
                "role": Object {
                  "name": "shipper",
                },
                "role_id": 1,
              }
            }
          />
          <Message
            client={null}
            key="UUID_MOCK_KEY_3"
            message="BAR_MESSAGE"
            t={[Function]}
            tenant={
              Object {
                "emails": Object {
                  "sales": Object {
                    "air": "sales@demo.com",
                    "general": "sales@demo.com",
                    "ocean": "sales@demo.com",
                    "rail": "sales@demo.com",
                  },
                  "support": Object {
                    "air": "imc.air@demo.com",
                    "general": "support@demo.com",
                    "ocean": "imc.sea@demo.com",
                    "rail": "imc.rail@demo.com",
                  },
                },
                "id": 123,
                "name": "TENANT_NAME",
                "phones": Object {
                  "support": "TENANT_SUPPORT_PHONE",
                },
                "scope": Object {
                  "cargo_info_level": "text",
                  "carriage_options": Object {
                    "on_carriage": Object {
                      "export": "mandatory",
                      "import": "mandatory",
                    },
                    "pre_carriage": Object {
                      "export": "optional",
                      "import": "optional",
                    },
                  },
                  "closed_quotation_tool": true,
                  "customs_export_paper": false,
                  "detailed_billing": true,
                  "has_customs": true,
                  "has_insurance": true,
                  "hide_grand_total": true,
                  "mandatory_form_fields": Object {
                    "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
                    "total_goods_value": 3370,
                  },
                  "modes_of_transport": Object {
                    "air": Object {
                      "AIR_LOAD_TYPE": 0,
                    },
                    "ocean": Object {
                      "OCEAN_LOAD_TYPE": 2,
                    },
                    "rail": Object {
                      "RAIL_LOAD_TYPE": 0,
                    },
                    "truck": Object {
                      "TRUCK_LOAD_TYPE": 0,
                    },
                  },
                  "terms": Array [
                    "FOO_TERM",
                    "BAR_TERM",
                  ],
                },
                "subdomain": "TENANT_SUBDOMAIN",
                "theme": Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                },
              }
            }
            theme={null}
            user={
              Object {
                "company_name": "FOO_COMPANY",
                "currency": "EUR",
                "email": "foo@bar.baz",
                "first_name": "John",
                "guest": false,
                "last_name": "Doe",
                "phone": "6345789",
                "role": Object {
                  "name": "shipper",
                },
                "role_id": 1,
              }
            }
          />
        </div>
        <Element
          name="messagesEnd"
        />
      </div>
      <form
        className="msg_form border_divider flex-100  layout-row layout-align-start-center"
        onSubmit={[Function]}
      >
        <div
          className="flex-90 layout-row layout-align-center-space-around height_100 layout-wrap"
        >
          <div
            className="flex-95 layout-row layout-align-center-center input_box"
          >
            <input
              className="flex-90 text_input"
              name="title"
              onChange={[Function]}
              placeholder="Type your message title here...."
              type="text"
              value=""
            />
          </div>
          <div
            className="flex-95 layout-row layout-align-center-center"
          >
            <textarea
              className="flex-90 text_area"
              cols="30"
              id=""
              name="message"
              onChange={[Function]}
              placeholder="Type your message text here...."
              rows="5"
              value=""
            />
          </div>
        </div>
        <div
          className="flex-10 height_100 layout-row layout-align-center-center"
        >
          <button
            className="flex-none layout-row layout-align-center-center send_button"
            onSubmit={[Function]}
            style={
              Object {
                "background": "black",
              }
            }
          >
            <i
              className="flex-none fa fa-paper-plane-o"
            />
          </button>
        </div>
      </form>
      <div />
    </div>
  </div>
</div>
`;

exports[`with admin user 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start convo_wrapper"
>
  <div
    className="summary_wrapper
          flex-100 layout-row layout-wrap layout-align-start-center "
    onClick={[Function]}
  >
    <div
      className="flex-70 layout-wrap layout-row layout-align-start-center"
    >
      <div
        className="flex-5"
      />
      Shipment Reference
      :
      <div
        className="flex-5"
      />
      <b />
    </div>
    <div
      className="flex-30 layout-align-center-center layout-row"
    >
      <h4
        className="flex-none no_m"
      >
        Show Details
      </h4>
      <div
        className="flex-5"
      />
      <i
        className="fa fa-info clip"
        style={
          Object {
            "background": "-webkit-linear-gradient(left, #333,#fafafa)",
          }
        }
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start messageView"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-start-start"
    >
      <div
        className="message_scroll
          flex-100 layout-row layout-align-start-start layout-wrap "
        id="messageList"
      >
        <div
          className="flex-70 layout-row layout-align-start-start layout-wrap"
        >
          <Message
            client={null}
            key="UUID_MOCK_KEY_10"
            message="FOO_MESSAGE"
            t={[Function]}
            tenant={
              Object {
                "emails": Object {
                  "sales": Object {
                    "air": "sales@demo.com",
                    "general": "sales@demo.com",
                    "ocean": "sales@demo.com",
                    "rail": "sales@demo.com",
                  },
                  "support": Object {
                    "air": "imc.air@demo.com",
                    "general": "support@demo.com",
                    "ocean": "imc.sea@demo.com",
                    "rail": "imc.rail@demo.com",
                  },
                },
                "id": 123,
                "name": "TENANT_NAME",
                "phones": Object {
                  "support": "TENANT_SUPPORT_PHONE",
                },
                "scope": Object {
                  "cargo_info_level": "text",
                  "carriage_options": Object {
                    "on_carriage": Object {
                      "export": "mandatory",
                      "import": "mandatory",
                    },
                    "pre_carriage": Object {
                      "export": "optional",
                      "import": "optional",
                    },
                  },
                  "closed_quotation_tool": true,
                  "customs_export_paper": false,
                  "detailed_billing": true,
                  "has_customs": true,
                  "has_insurance": true,
                  "hide_grand_total": true,
                  "mandatory_form_fields": Object {
                    "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
                    "total_goods_value": 3370,
                  },
                  "modes_of_transport": Object {
                    "air": Object {
                      "AIR_LOAD_TYPE": 0,
                    },
                    "ocean": Object {
                      "OCEAN_LOAD_TYPE": 2,
                    },
                    "rail": Object {
                      "RAIL_LOAD_TYPE": 0,
                    },
                    "truck": Object {
                      "TRUCK_LOAD_TYPE": 0,
                    },
                  },
                  "terms": Array [
                    "FOO_TERM",
                    "BAR_TERM",
                  ],
                },
                "subdomain": "TENANT_SUBDOMAIN",
                "theme": Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                },
              }
            }
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            user={
              Object {
                "company_name": "FOO_COMPANY",
                "currency": "EUR",
                "email": "foo@bar.baz",
                "first_name": "John",
                "guest": false,
                "last_name": "Doe",
                "phone": "6345789",
                "role": Object {
                  "name": "shipper",
                },
                "role_id": 1,
              }
            }
          />
          <Message
            client={null}
            key="UUID_MOCK_KEY_11"
            message="BAR_MESSAGE"
            t={[Function]}
            tenant={
              Object {
                "emails": Object {
                  "sales": Object {
                    "air": "sales@demo.com",
                    "general": "sales@demo.com",
                    "ocean": "sales@demo.com",
                    "rail": "sales@demo.com",
                  },
                  "support": Object {
                    "air": "imc.air@demo.com",
                    "general": "support@demo.com",
                    "ocean": "imc.sea@demo.com",
                    "rail": "imc.rail@demo.com",
                  },
                },
                "id": 123,
                "name": "TENANT_NAME",
                "phones": Object {
                  "support": "TENANT_SUPPORT_PHONE",
                },
                "scope": Object {
                  "cargo_info_level": "text",
                  "carriage_options": Object {
                    "on_carriage": Object {
                      "export": "mandatory",
                      "import": "mandatory",
                    },
                    "pre_carriage": Object {
                      "export": "optional",
                      "import": "optional",
                    },
                  },
                  "closed_quotation_tool": true,
                  "customs_export_paper": false,
                  "detailed_billing": true,
                  "has_customs": true,
                  "has_insurance": true,
                  "hide_grand_total": true,
                  "mandatory_form_fields": Object {
                    "description_of_goods": "MANDATORY_FIELDS_DESCRIPTION",
                    "total_goods_value": 3370,
                  },
                  "modes_of_transport": Object {
                    "air": Object {
                      "AIR_LOAD_TYPE": 0,
                    },
                    "ocean": Object {
                      "OCEAN_LOAD_TYPE": 2,
                    },
                    "rail": Object {
                      "RAIL_LOAD_TYPE": 0,
                    },
                    "truck": Object {
                      "TRUCK_LOAD_TYPE": 0,
                    },
                  },
                  "terms": Array [
                    "FOO_TERM",
                    "BAR_TERM",
                  ],
                },
                "subdomain": "TENANT_SUBDOMAIN",
                "theme": Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                },
              }
            }
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            user={
              Object {
                "company_name": "FOO_COMPANY",
                "currency": "EUR",
                "email": "foo@bar.baz",
                "first_name": "John",
                "guest": false,
                "last_name": "Doe",
                "phone": "6345789",
                "role": Object {
                  "name": "shipper",
                },
                "role_id": 1,
              }
            }
          />
        </div>
        <Element
          name="messagesEnd"
        />
      </div>
      <form
        className="msg_form border_divider flex-100  layout-row layout-align-start-center"
        onSubmit={[Function]}
      >
        <div
          className="flex-90 layout-row layout-align-center-space-around height_100 layout-wrap"
        >
          <div
            className="flex-95 layout-row layout-align-center-center input_box"
          >
            <input
              className="flex-90 text_input"
              name="title"
              onChange={[Function]}
              placeholder="Type your message title here...."
              type="text"
              value=""
            />
          </div>
          <div
            className="flex-95 layout-row layout-align-center-center"
          >
            <textarea
              className="flex-90 text_area"
              cols="30"
              id=""
              name="message"
              onChange={[Function]}
              placeholder="Type your message text here...."
              rows="5"
              value=""
            />
          </div>
        </div>
        <div
          className="flex-10 height_100 layout-row layout-align-center-center"
        >
          <button
            className="flex-none layout-row layout-align-center-center send_button"
            onSubmit={[Function]}
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          >
            <i
              className="flex-none fa fa-paper-plane-o"
            />
          </button>
        </div>
      </form>
      <div />
    </div>
  </div>
</div>
`;
